--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.31",
@@ -17,6 +22,7 @@
   },
   "scripts": {
     "init": "pnpm install",
+    "lint": "eslint ./src --fix",
     "start": "cross-env BROWSER=none react-scripts start",
     "build": "react-scripts build"
   },
