--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-redux": "^7.1.28",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
+    "axios": "^1.6.0",
     "cross-env": "^7.0.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-typescript": "^3.6.1",
